[gd_scene load_steps=4 format=3 uid="uid://d0lhb6t1okeas"]

[ext_resource type="Texture2D" uid="uid://cosuvi3mmtp8t" path="res://Assets/PNG/Default/ui_box.png" id="1_usncs"]
[ext_resource type="Script" uid="uid://cxw7ugsp264j2" path="res://Scripts/InventorySlot.gd" id="2_usncs"]

[sub_resource type="LabelSettings" id="LabelSettings_usncs"]
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="InvSlot" type="TextureRect"]
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("1_usncs")
script = ExtResource("2_usncs")

[node name="ItemSlot" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 56.0
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 36.0
offset_right = 55.0
offset_bottom = 59.0
text = "0"
label_settings = SubResource("LabelSettings_usncs")
horizontal_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
